--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -286,5 +286,5 @@
 </div>
 
 <div class="footer">
-  Made with <img src="/images/axe.png" alt=""> by <a href="http://davewasmer.com" target="_blank">@davewasmer</a>.
+  Made with <img src="/images/axe.png" alt=""> by <a href="http://davewasmer.com" target="_blank">@davewasmer</a>. <a href="https://github.com/davewasmer/bootstrapper-math" target="_blank">Pull requests</a> welcome!
 </div>
